--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,7 +28,7 @@
                     <label for="location-search" class="col-12">Enter your location here</label>
                     <input type="search" id="location-search" placeholder="Search">
                     <i class="fa-solid fa-search search-icon"></i>
-                    <button class="btn btn-primary">Search</button>
+                    <input type="submit" class="btn btn-primary" value="Search">
                 </div>
                <div class="col m-auto">
                 <button
@@ -48,15 +47,16 @@
                     <h2 class="fs-5"  id="date">Today</h2>
                     <h3 class="fs-1 mb-0" id="city">Tamale</h3>
                     <ul class="weather-conditions">
-                        <li>wind: <span id="wind">00</span></li>
-                        <li>humidity: <span id="humidity">00</span></li>
                         <li id="description">Heavy Showers</li>
+                        <li>wind: <span id="wind">0.0</span>km/h</li>
+                        <li>humidity: <span id="humidity">0.0</span>%</li>
                     </ul>
                 </div>
                 <div class="col-9 col-md-7 temperature-now">
                     <p class="card-text text-end emoji">
-                        <i class="fa-solid fa-cloud-showers-water"></i>
-                        <span><span id="temp">26</span><sup><small class="fs-5">&#176C</small></sup></span>
+                        <i id="weather-icon" class="fa-solid fa-cloud-showers-water"></i>
+                        <img id="weather-img" src="" alt="">
+                        <span><span id="temp">26</span><sup><small class="fs-5"><span class="units"><span id="celcius">°C</span>|<span id="farenheit">°F</span></span></small></sup></span>
                     </p>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center"  id="date">Monday</h5>
                             <div class="temperature-next">
-                                <p class="card-text text-center">28<sup><small class="fs-5">&#176C</small></sup></p>
+                                <p class="card-text text-center">28<sup><small class="fs-5">°C</small></sup></p>
                                 <p class="card-text text-center weather-description">Thunder Storm</p>
                                 <p class="card-text text-center emoji">
                                     <i class="fa-solid fa-cloud-bolt"></i>
@@ -84,7 +84,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center"  id="date">Tuesday</h5>
                             <div class="temperature-next">
-                                <p class="card-text text-center">30<sup><small class="fs-5">&#176C</small></sup></p>
+                                <p class="card-text text-center">30<sup><small class="fs-5"></small>°C </sup></p>
                                 <p class="card-text text-center weather-description">Thunder Storm</p>
                                 <p class="card-text text-center emoji">
                                     <i class="fa-solid fa-cloud"></i>
@@ -99,7 +99,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center" id="date">Wednesday</h5>
                             <div class="temperature-next">
-                                <p class="card-text text-center">27<sup><small class="fs-5">&#176C</small></sup></p>
+                                <p class="card-text text-center">27<sup><small class="fs-5">°C </small></sup></p>
                                 <p class="card-text text-center weather-description">Thunder Storm</p>
                                 <p class="card-text text-center emoji">
                                     <i class="fa fa-cloud-showers-water"></i>
@@ -114,7 +114,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-center" id="date">Thursday</h5>
                             <div class="temperature-next">
-                                <p class="card-text text-center">26<sup><small class="fs-5">&#176C</small></sup></p>
+                                <p class="card-text text-center">26<sup><small class="fs-5">°C </small></sup></p>
                                 <p class="card-text text-center weather-description">Thunder Storm</p>
                                 <p class="card-text text-center emoji">
                                     <i class="fa-solid fa-cloud-rain"></i>
@@ -130,7 +130,7 @@
                             <h5 class="card-title text-center"  id="date">Friday</h5>
                             <div class="temperature-next">
                                 <p class="card-text text-center temperature-next">33<sup><small
-                                            class="fs-5">&#176C</small></sup></p>
+                                            class="fs-5">°C</small></sup></p>
                                 <p class="card-text text-center weather-description">Thunder Storm</p>
                                 <p class="card-text text-center emoji">
                                     <i class="fa fa-sun"></i>
@@ -142,6 +142,12 @@
             </div>
         </div>
     </main>
+    <div class="source">
+        <a href="https://github.com/n-sherifa/weather-app-shecodes"> Open-Source code</a>
+        <span>
+            by Sherifa
+        </span>
+    </div>
 </body>
 <script  src="src/index.js"></script>
 
